# whack

./: .gitignore  Cargo.toml  README.md  whack.toml
src/: config.rs  main.rs
src/cli/: commands.rs  executor.rs  mod.rs  parser.rs
src/servers/: command.rs  mod.rs  processes.rs  server_handle.rs  server_info.rs
src/util/: line_cache.rs  mod.rs
