[package]
name = "whack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
tokio = { version = "1.18.2", features = ["full"] }
parking_lot = "0.12.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
nom = "7.1.1"
serde = { version = "1.0.137", features = ["derive"] }
toml = "0.5.9"
shell-words = "1.1.0"

tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["parking_lot"] }
#tracing-appender = "0.2.2"
